<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:pointerIcon="arrow"
    android:background="@android:color/holo_green_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sony.proyecto.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/Logintext"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@android:dimen/notification_large_icon_width" />

    <EditText
        android:id="@+id/etcuenta"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tlogin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <EditText
        android:id="@+id/etpass"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etcuenta"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/etpass"
        >

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="100dp"
            android:gravity="left"
            android:text="@string/btningresar"
            android:textColor="@color/colorVerdeOscuro"
            android:background="@color/ColorActionBarTitle"

            />

        <Button
            android:id="@+id/btnregistrarse"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="50dp"
            android:gravity="right"
            android:text="@string/btnregistrar"
            android:textColor="@color/colorVerdeOscuro"
            android:background="@color/ColorActionBarTitle"
            />

    </LinearLayout>



</RelativeLayout>
