<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sony.proyecto.NewBook">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:allowBackup="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="363dp"
        android:layout_height="165dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/libro"
        tools:elevation="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintLeft_toLeftOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_title_black_24dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintLeft_toLeftOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_person_black_24dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintLeft_toLeftOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/ic_map_black_24dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintLeft_toLeftOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_book_black_24dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/ic_forum_black_24dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:drawablePadding="8dp"
        android:elevation="0dp"
        android:text="Agregar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/textTitulo"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:elevation="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textAutor"
        app:layout_constraintRight_toRightOf="@+id/textAutor"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/textAutor"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:ems="2"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textcategoria"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo"
        app:layout_constraintRight_toRightOf="@+id/textcategoria" />

    <Spinner
        android:id="@+id/textcategoria"
        android:layout_width="260dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textIdioma"
        app:layout_constraintTop_toBottomOf="@+id/textAutor"
        app:layout_constraintRight_toRightOf="@+id/textIdioma" />

    <Spinner
        android:id="@+id/textIdioma"
        android:layout_width="260dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textAño"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/textcategoria"
        app:layout_constraintRight_toRightOf="@+id/textEstado" />

    <EditText
        android:id="@+id/textAño"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.399"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIdioma" />

    <SeekBar
        android:id="@+id/textEstado"
        android:layout_width="125dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/textAño"
        app:layout_constraintRight_toRightOf="@+id/button" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/titulo"
        android:textColor="@color/letras"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textTitulo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textTitulo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autor"
        app:layout_constraintBottom_toTopOf="@+id/textAutor"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/textAutor"
        android:textColor="@color/letras"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:layout_marginBottom="8dp"
        android:textColor="@color/letras"
        app:layout_constraintBottom_toTopOf="@+id/textcategoria"
        app:layout_constraintTop_toBottomOf="@+id/textAutor"
        app:layout_constraintLeft_toLeftOf="@+id/textcategoria" />

    <TextView
        android:id="@+id/idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idioma"
        android:textColor="@color/letras"
        app:layout_constraintBottom_toTopOf="@+id/textIdioma"
        app:layout_constraintLeft_toLeftOf="@+id/textIdioma"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@+id/textcategoria" />

    <TextView
        android:id="@+id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/letras"
        android:text="@string/estado"
        app:layout_constraintTop_toTopOf="@+id/año"
        app:layout_constraintLeft_toLeftOf="@+id/textEstado" />

    <TextView
        android:id="@+id/año"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/año"
        android:textColor="@color/letras"
        app:layout_constraintLeft_toLeftOf="@+id/textAño"
        app:layout_constraintTop_toBottomOf="@+id/textIdioma"
        android:layout_marginTop="3dp" />

    <ImageButton
        android:id="@+id/AddFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_circle_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.958"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />



</android.support.constraint.ConstraintLayout>
